kubernetes/ingress/back_end_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-summarizer-back-end-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2

spec:
  tls:
    - hosts:
        - audio-summarize.josh-martin.dev  # front end mime type issue
        - josh-martin.dev # no such front end mime type issue!
        - test.josh-martin.dev
        - api.josh-martin.dev
      secretName: echo-tls
  rules:
#  - host: josh-martin.dev # TODO debug compatibility with front end ingress
#    http:
#        paths:
#        - pathType: Prefix
#          path: /api(/|$)(.*)
#          backend:
#            service:
#              name: fast-api-service
#              port:
#                number: 80
  - host: api.josh-martin.dev
    http:
      paths:
        - pathType: Prefix
          path: /api(/|$)(.*)
          backend:
            service:
              name: fast-api-service
              port:
                number: 80
