kubernetes/ingress/back_end_ingress_api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end-ingress-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2

    # Basic Limits
    nginx.ingress.kubernetes.io/proxy-body-size: "15m"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-rps: "10"

spec:
  tls:
    - hosts:
        - api.josh-martin.dev
      secretName: back-end-tls
  rules:
  - host: api.josh-martin.dev
    http:
      paths:
        - path: /api(/)(.*)
          pathType: Prefix
          backend:
            service:
              name: fast-api-service
              port:
                name: http
