kubernetes/ingress/back_end_ingress_root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-summarizer-back-end-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # TODO get visitor IP functional. cloudflare uses specific header
spec:
  tls:
    - hosts:
        - audio-summarize.josh-martin.dev
        - josh-martin.dev
        - api.josh-martin.dev
      secretName: echo-tls
  rules:
  - host: josh-martin.dev
    http:
      paths:
          - pathType: Prefix
            path: /api.josh-martin.dev(/)(.*)
            backend:
              service:
                name: fast-api-service
                port:
                  name: http
