kubernetes/ingress/front_end_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audio-summarizer-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    # Reported that this is needed since version change of nginx
    # Mime type issues were present
    # https://github.com/kubernetes/ingress-nginx/issues/5265
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
        - audio-summarize.josh-martin.dev
        - josh-martin.dev
        - test.josh-martin.dev
      secretName: echo-tls
  rules:
  - host: josh-martin.dev
    http:
      paths:
        - pathType: Exact
          path: /(?!api)(.*)  # Will not match if API word present
          backend:
            service:
              name: react-service
              port:
                number: 80
